2006-10-19  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/subparse/gstsubparse.c: (strip_trailing_newlines),
	(parse_subrip):
	  Strip trailing newlines from subtitle text output.

2006-10-18  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/subparse/gstsubparse.c: (gst_sub_parse_dispose),
	(gst_sub_parse_change_state):
	  Fix memleak; clear subparse->textbuf n state change function.

2006-10-18  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/subparse/gstsubparse.c:
	(gst_sub_parse_data_format_autodetect):
	  Don't require subrip (.srt) files to start with a chunk number of 1.

2006-10-18  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_event), (gst_base_audio_sink_render):
	* gst-libs/gst/audio/gstbaseaudiosink.h:
	Extract rate from the NEWSEGMENT event.
	Use commit_full to also take rate adjustment into account when writing
	samples to the ringbuffer.
	
	* gst-libs/gst/audio/gstringbuffer.c:
	(gst_ring_buffer_commit_full), (gst_ring_buffer_commit),
	(gst_ring_buffer_read):
	* gst-libs/gst/audio/gstringbuffer.h:
	Added _commit_full() to also take rate into account.
	Use simple interpolation algorithm to resample audio.
	API: gst_ring_buffer_commit_full()

	* tests/examples/seek/scrubby.c: (speed_cb), (do_seek):
	* tests/examples/seek/seek.c: (segment_done):
	Don't try to seek with 0.0 rate, just pause instead.
	Remove bogus debug line.

2006-10-18  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/playback/gstplaybasebin.c: (subbin_startup_sync_msg),
	(setup_source):
	  Catch async errors when starting up the subtitle bin, so we can
	  stop waiting and continue with the main film instead of hanging
	  forever. Fixes #339366.

	* tests/check/elements/playbin.c: (playbin_suite):
	  Enable unit test for the above.

2006-10-18  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/check/Makefile.am:
	* tests/check/elements/.cvsignore: